ensure blog post title isn't cropped

--- a/themes/mdb/assets/sass/components/_blog_post.scss
+++ b/themes/mdb/assets/sass/components/_blog_post.scss
@@ -14,6 +14,10 @@ div.blog-post {
     width: 75%;
   }
 
+  article header {
+    width: auto;
+  }
+
   article,
   time {
     @include breakpoint(tablet) {
